comienzo seccion devocional

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="title_activity_muro">MURO</string>
     <string name="muro">MURO R07D</string>
     <string name="pubmuro">Publicar P&amp;AG en Muro</string>
+    <string name="dev">DEVOCIONALES</string>
 
 </resources>
