Mejoras en push recordatorio findemes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -83,7 +83,6 @@
     <string name="pun">1000</string>
     <string name="hash">#</string>
     <string name="ol">¿Olvidó su Clave?</string>
-    
-    
+    <string name="title_activity_jalert">JalertActivity</string>
 
 </resources>
