--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -87,5 +87,7 @@
     <string name="reg">REGISTRO</string>
     <string name="devo">DEVOCIONAL</string>
     <string name="title_activity_recdia_activity2">REGISTRO DIARIO</string>
+    <string name="tbtext">P/AG/LN</string>
+    <string name="pub"><b>Publicar P&amp;AG en Muro:</b> Publicar las peticiones y acciones de gracias en el muro de la comunidad R07D.</string>
 
 </resources>
