--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="ldnins"><b>Lista de Nuevos:</b> Lista de personas que desea que lleguen a Cristo.</string>
     <string name="peiins"><b>Peticiones/Intercesión:</b> Las 5 opciones predefinidas en el registro son solo algunos ejemplos por los que debemos orar. Escriba adicionalmente sus propias peticiones.</string>
     <string name="r07dabout">R07D Ver:2.2  © 2013 </string>
-    <string name="autoresabout">By XoaquinSoft:</string>
+    <string name="autoresabout">By XoaquinSoft © 2013</string>
     <string name="r07dspalsh">R07D</string>
     <string name="BYJ">by XoaquinSoft</string>
     <string name="title_activity_calendario_activity2">CALENDARIO</string>
