--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,95 +4,118 @@
     <string name="app_name">R07D</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_login">INICIO DE SESION</string>
-    <string name="title_activity_calendario">CALENDARIO</string>
+    <string name="title_activity_login">SIGN IN</string>
+    <string name="title_activity_calendario">CALENDAR</string>
     <string name="sep"> _________________________O________________________</string>
     <string name="emaillabel">EMAIL:</string>
-    <string name="hint">Ej: miusuario@micorreo.com</string>
-    <string name="contrasenialab">CONTRASEÑA:</string>
-    <string name="claveejlabel">Ej:salmo45</string>
-    <string name="title_activity_recdia">REGISTRO DIARIO</string>
+    <string name="hint">Ej: myuser@myemail.com</string>
+    <string name="contrasenialab">PASSWORD:</string>
+    <string name="claveejlabel">e.g:Psalm45</string>
+    <string name="title_activity_recdia">DAILY RECORD</string>
     <string name="recdialabel">ACTIVIDADMAINREGDIARIODB</string>
-    <string name="lecbiblilabel">Lectura Bíblica:</string>
-    <string name="hintlb">Ej: Sal 45:2, Pr 21:5\u201415, Jr 12</string>
-    <string name="hiniciolabel">Hora Inicio:</string>
-    <string name="hfinlabel">Hora Fin:   </string>
-    <string name="hablolabel">¿Qué me habló Dios?</string>
-    <string name="adglabel">Acción de Gracias</string>
-    <string name="ldnlabel">Lista de Nuevos</string>
-    <string name="pilabel">Peticiones/Intercesión</string>
-    <string name="plcblabel">Pastores/Líderes</string>
-    <string name="cbcoordlabel">Coordinadores</string>
-    <string name="mdgccblabel">Miembros de Grupo</string>
-    <string name="cbcoodlabel">Coordinadores</string>
-    <string name="cbdisclabel">Discípulos</string>
-    <string name="cboplclabel">Oración por la Cosecha</string>
-    <string name="dialabel">DIA</string>
-    <string name="fechalabel">FECHA</string>
-    <string name="cbolabel">¿Asistí a la Oración Presencial?</string>
-    <string name="cboilabel">¿Asistí a la Oración por Internet?</string>
-    <string name="lbothin">Hora Inicio</string>
-    <string name="lbhfin">Hora Fin</string>
-    <string name="guargarblabel">GUARDAR</string>
-    <string name="breplabel">ENVIAR REPORTE</string>
-    <string name="title_activity_reporte">REPORTE MENSUAL</string>
-    <string name="crblabel">REPORTES</string>
-    <string name="nombrerep">NOMBRE:</string>
-    <string name="coordgclabel">NOMBRE LIDER:</string>
-    <string name="sfecha">SELECCIONAR DIA</string>
-    <string name="mesanioreport">SELECCIONAR MES / AÑO</string>
-    <string name="con">CONECTARSE</string>
-    <string name="regis">REGISTRARSE</string>
+    <string name="lecbiblilabel">Bible Reading:</string>
+    <string name="hintlb">e.g: Psal 45:2, Pr 21:5\u201415, Jer 12</string>
+    <string name="hiniciolabel">Initial Time:</string>
+    <string name="hfinlabel">End Time:   </string>
+    <string name="hablolabel">What did God tell me?</string>
+    <string name="adglabel">Thanks Giving</string>
+    <string name="ldnlabel">List of New</string>
+    <string name="pilabel">Petitions/Intercession</string>
+    <string name="plcblabel">Pastors/Leaders</string>
+    <string name="cbcoordlabel">Coordinators</string>
+    <string name="mdgccblabel">Group Members</string>
+    <string name="cbcoodlabel">Coordinators</string>
+    <string name="cbdisclabel">Disciples</string>
+    <string name="cboplclabel">Prayer for the Harvest</string>
+    <string name="dialabel">DAY</string>
+    <string name="fechalabel">DATE</string>
+    <string name="cbolabel">Went to prayer meeting?</string>
+    <string name="cboilabel">Went to prayer meeting on Internet?</string>
+    <string name="lbothin">Initial Time</string>
+    <string name="lbhfin">End Time</string>
+    <string name="guargarblabel">SAVE</string>
+    <string name="breplabel">SEND REPORT</string>
+    <string name="title_activity_reporte">MONTHLY REPORT</string>
+    <string name="crblabel">REPORTS</string>
+    <string name="nombrerep">NAME:</string>
+    <string name="coordgclabel">NAME OF LEADER:</string>
+    <string name="sfecha">SELECT DAY</string>
+    <string name="mesanioreport">SELECT MONTH / YEAR</string>
+    <string name="con">SIGN IN</string>
+    <string name="regis">SIGN UP</string>
     <string name="OOO">----------------------O----------------------</string>
-    <string name="mdlr">META DE LECTURA:</string>
-    <string name="CLMR">¿CUMPLI LA META? :</string>
-    <string name="cmlm2">¿CUMPLI LA META? :</string>
-    <string name="SICLM">SI</string>
+    <string name="mdlr">READING GOAL:</string>
+    <string name="CLMR">MET THE GOAL? :</string>
+    <string name="cmlm2">MET THE GOAL? :</string>
+    <string name="SICLM">YES</string>
     <string name="NCLMR">NO</string>
-    <string name="usuario">Usuario</string>
-    <string name="insmenu">Instrucciones</string>
-    <string name="acerca">Acerca de R07D</string>
-    <string name="title_activity_inst">INSTRUCCIONES</string>
-    <string name="title_activity_about">ACERCA DE\.\.\.</string>
-    <string name="desconectarse">DESCONECTARSE</string>
+    <string name="usuario">User</string>
+    <string name="insmenu">Instructions</string>
+    <string name="acerca">About R07D</string>
+    <string name="title_activity_inst">INSTRUCTIONS</string>
+    <string name="title_activity_about">ABOUT\.\.\.</string>
+    <string name="desconectarse">SIGN OUT</string>
     <string name="twitter2">twitter2</string>
     <string name="twitter1">twitter1</string>
-    <string name="inscoord"><b>Nombre Líder:</b> Nombre del líder o coordinador del grupo al que pertenece.</string>
-    <string name="mdlcins"><b>Meta de Lectura:</b> Es una forma de esforzarse para cumplir con la lectura diaria de la Biblia. Ejemplo: Si vamos a leer 2 capitulos diarios, la meta del mes podria ser: Genesis 1\u201450 y Exodo 1\u201410.</string>
-    <string name="clmins"><b>¿Cumplí la meta? :</b> Si cumplió la meta en un porcentaje superior al 90% marque SI. Si llegó al 89.9% O MENOS de la meta, NO la cumplió. Esto le llevará a generar un mayor esfuerzo para el siguiente mes.</string>
-    <string name="hihfins">"<b>Hora Inicio / Hora Fin :</b> Hora en que inicia y finaliza su sesion diaria de oración y lectura de Biblia.  "</string>
-    <string name="qmhDins">"<b>¿Qué me habló Dios? :</b> Palabra específica de algun versículo de acuerdo a necesidad o situacion que se esté atravesando. O Versículos que han dejado una enseñanza o un principio para su vida. Igualmente se pueden llevar registros de pensamientos o palabras dadas por Dios.  "</string>
-    <string name="adgins"><b>Acción de Gracias:</b> Lista de respuestas a la oración. O acción de gracias por la espera de algo específico.</string>
-    <string name="ldnins"><b>Lista de Nuevos:</b> Lista de personas que desea que lleguen a Cristo.</string>
-    <string name="peiins"><b>Peticiones/Intercesión:</b> Las 5 opciones predefinidas en el registro son solo algunos ejemplos por los que debemos orar. Escriba adicionalmente sus propias peticiones.</string>
+    <string name="inscoord"><b>Name of Leader:</b> Name of the leader or group coordinator to which you belong.</string>
+    <string name="mdlcins"><b>Reading Goal:</b> It is a way to make an effort in order to meet a daily bible reading goal. Example: If you are going to read 2 chapters daily, the goal could be: Gn 1\u201450 and Ex 1\u201410.</string>
+    <string name="clmins"><b>Met the Goal? :</b> If you met the goal within a percentage higher than 90%, mark YES. If barely made it to 89.9% or less then mark NO. This will take you to make a greater effort in the next month.</string>
+    <string name="hihfins">"<b>Initial Time / End Time :</b> Time in which your daily session of prayer and bible reading starts and ends.  "</string>
+    <string name="qmhDins">"<b>What did God tell me? :</b> Specific word from some verse, in accordance to a personal necessity or situation that you are going through, or a principle for your life. Also records of God given thoughts or impressions can be kept.  "</string>
+    <string name="adgins"><b>Thanks Giving:</b> List of answers to prayers.Or thanks giving while awaiting for something specific.</string>
+    <string name="ldnins"><b>List of New:</b> List of people that you want to get to know Jesus.</string>
+    <string name="peiins"><b>Petitions/Intercession:</b> The 5 predefined options are only a few we should pray for. Additionally write your own petitions.</string>
     <string name="r07dabout">R07D Ver:2.2  © 2013 </string>
     <string name="autoresabout">By XoaquinSoft © 2013</string>
     <string name="r07dspalsh">R07D</string>
     <string name="BYJ">by XoaquinSoft</string>
-    <string name="title_activity_calendario_activity2">CALENDARIO</string>
-    <string name="title_activity_muro">MURO</string>
-    <string name="muro">MURO R07D</string>
-    <string name="pubmuro">Publicar P&amp;AG en Muro</string>
-    <string name="dev">DEVOCIONALES</string>
+    <string name="title_activity_calendario_activity2">CALENDAR</string>
+    <string name="title_activity_muro">WALL</string>
+    <string name="muro">WALL R07D</string>
+    <string name="pubmuro">Publish P&amp;TG on the Wall</string>
+    <string name="dev">DEVOTIONALS</string>
     <string name="title_activity_nivel">NivelActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="titlenivel">NIVEL R07D</string>
+    <string name="titlenivel">R07D LEVEL</string>
     <string name="title_activity_niveles">NivelesActivity</string>
-    <string name="puntaje">PUNTAJE</string>
+    <string name="puntaje">SCORE</string>
     <string name="pun">1000</string>
     <string name="hash">#</string>
-    <string name="ol">¿Olvidó su Clave?</string>
+    <string name="ol">Forgot Password?</string>
     <string name="title_activity_jalert">JalertActivity</string>
-    <string name="reg">REGISTRO</string>
-    <string name="devo">DEVOCIONAL</string>
-    <string name="title_activity_recdia_activity2">REGISTRO DIARIO</string>
-    <string name="tbtext">P/AG/LN</string>
-    <string name="pub"><b>Publicar P&amp;AG en Muro:</b> Publicar las peticiones y acciones de gracias en el muro de la comunidad R07D.</string>
-    <string name="lec">Lectura:</string>
-    <string name="COMP">Compartir</string>
-    <string name="mur">Muro R07D</string>
-    <string name="env">ENVIAR</string>
+    <string name="reg">RECORD</string>
+    <string name="devo">DEVOTIONAL</string>
+    <string name="title_activity_recdia_activity2">DAILY RECORD</string>
+    <string name="tbtext">P/TG/LON</string>
+    <string name="pub"><b>Publish P&amp;TG on The Wall:</b> Publish petitions and thanks giving messages on the wall of the R07D community.</string>
+    <string name="lec">Reading:</string>
+    <string name="COMP">Share</string>
+    <string name="mur">R07D Wall</string>
+    <string name="env">SEND</string>
     <string name="title_activity_recdia_activity3">RecdiaActivity3</string>
+    
+    <string name="ene">January</string>
+    <string name="feb">February</string>
+    <string name="mar">March</string>
+    <string name="abr">April</string>   
+    <string name="may">May</string>
+    <string name="jun">June</string>
+    <string name="jul">July</string>
+    <string name="ago">August</string>
+    <string name="sept">September</string>
+    <string name="oct">October</string>
+    <string name="nov">November</string>
+    <string name="dic">December</string>
+
+    
+    <string name="lun">MON</string>
+    <string name="mart">TUE</string>
+    <string name="mie">WED</string>
+    <string name="jue">THU</string>   
+    <string name="vie">FRI</string>
+    <string name="sab">SAT</string>
+    <string name="dom">SUN</string>
+    
 
 </resources>
