--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -61,7 +61,7 @@
     <string name="mdlcins"><b>Meta de Lectura:</b> Es una forma de esforzarse para cumplir con la lectura diaria de la Biblia. Ejemplo: Si vamos a leer 2 capitulos diarios, la meta del mes podria ser: Genesis 1\u201450 y Exodo 1\u201410.</string>
     <string name="clmins"><b>¿Cumplí la meta? :</b> Si cumplió la meta en un porcentaje superior al 90% marque SI. Si llegó al 89.9% O MENOS de la meta, NO la cumplió. Esto le llevará a generar un mayor esfuerzo para el siguiente mes.</string>
     <string name="hihfins">"<b>Hora Inicio / Hora Fin :</b> Hora en que inicia y finaliza su sesion diaria de oración y lectura de Biblia.  "</string>
-    <string name="qmhDins">"<b>¿Qué me habló Dios? :</b> Palabra específica de algun versículo de acuerdo a necesidad o situacion que se esté atravesando. O Versículos que han dejado una enseñanza o un principio para su vida. Igualmente se pueden llevar registros de pensamientos o palabras dadas por Dios.  "</string>
+    <string name="qmhDins">"<b>¿Qué me habló Dios? :</b> Palabra específica de algún versículo de acuerdo a necesidad o situacion que se esté atravesando. O Versículos que han dejado una enseñanza o un principio para su vida. Igualmente se pueden llevar registros de pensamientos o palabras dadas por Dios.  "</string>
     <string name="adgins"><b>Acción de Gracias:</b> Lista de respuestas a la oración. O acción de gracias por la espera de algo específico.</string>
     <string name="ldnins"><b>Lista de Nuevos:</b> Lista de personas que desea que lleguen a Cristo.</string>
     <string name="peiins"><b>Peticiones/Intercesión:</b> Las 5 opciones predefinidas en el registro son solo algunos ejemplos por los que debemos orar. Escriba adicionalmente sus propias peticiones.</string>
