--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -116,6 +116,39 @@
     <string name="sab">SAB</string>
     <string name="dom">DOM</string>
     
+    <string name="regr">REGISTRO</string>
+     <string name="devr">DEVOCIONAL</string>
+     
+     <string name="nlun">Lunes</string>
+    <string name="nmart">Martes</string>
+    <string name="nmie">Miercoles</string>
+    <string name="njue">Jueves</string>   
+    <string name="nvie">Viernes</string>
+    <string name="nsab">Sabado</string>
+    <string name="ndom">Domingo</string>
+    
+    <string name="mesr">MES</string>
+    <string name="anior">AÑO</string>
     
     
+    
+    <string name="shr">R07 On The Go! Haz tu R07 en cualquier parte! Descarga la aplicaci\u00F3n R07D en: https://play.google.com/store/apps/details?id=com.xoaquin.r07d</string>
+    
+     <string name="stg">Si te gusta </string>
+     <string name="tus"> por favor tomate un segundo para calificarla. Gracias por el apoyo! </string>
+     <string name="comps">Comp\u00E1rtela!</string>
+     
+      <string name="rr">Calificar </string>
+     <string name="rl">Recordar mas adelante..</string>
+     <string name="nt">No, gracias</string>
+     
+       <string name="jal">Recordemos que este es el d\u00EDa que hizo el Se\u00F1or para que envi\u00E1ramos el R07D al l\u00EDder!</string>
+      <string name="jal2">Bendiciones!</string>
+     <string name="okr">OK</string>
+     <string name="latr">DESPUES</string>
+     
+     <string name="atg">(AG)</string>
+     
+    
+     
 </resources>
