--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -117,5 +117,41 @@
     <string name="sab">SAT</string>
     <string name="dom">SUN</string>
     
+    <string name="regr">RECORD</string>
+    <string name="devr">DEVOTIONAL</string>
+    
+    <string name="nlun">Monday</string>
+    <string name="nmart">Tuesday</string>
+    <string name="nmie">Wednesday</string>
+    <string name="njue">Thursday</string>   
+    <string name="nvie">Friday</string>
+    <string name="nsab">Saturday</string>
+    <string name="ndom">Sunday</string>
+    
+    <string name="mesr">MONTH</string>
+    <string name="anior">YEAR</string>
+    
+    <string name="shr">R07 On The Go! Do your R07 anywhere! Download the App R07D at: https://play.google.com/store/apps/details?id=com.xoaquin.r07d</string>
+    
+     <string name="stg">If you lilke </string>
+     <string name="tus"> please take a second to rate it. Thanks for your support! </string>
+     <string name="comps">Share It!</string>
+     
+     <string name="rr">Rate </string>
+     <string name="rl">Remind me later..</string>
+     <string name="nt">No, thanks</string>
+     
+     
+     
+      <string name="jal">Remember this is the day that the Lord has made for us to send the R07D to our leader!</string>
+      <string name="jal2">Blessings!</string>
+     <string name="okr">OK</string>
+     <string name="latr">LATER</string>
+     
+     <string name="atg">(TG)</string>
+     
+   
+     
+     
 
 </resources>
