ADICION NOTIFICACION MEJORA EN NAVEGACION

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -214,4 +214,7 @@
 <string name="comreg">COMENTARIO ACERCA DE</string> 
 <string name="or07w">EN MURO R07D</string> 
 
+<string name="lampp">L\u00E1mpara es a mis pies tu palabra, y lumbrera a mi camino</string>
+
+
 </resources>
