OFFLINE BASICO+OPTIMIZACION+REFACTORING

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -215,6 +215,8 @@
 <string name="or07w">EN MURO R07D</string> 
 
 <string name="lampp">L\u00E1mpara es a mis pies tu palabra, y lumbrera a mi camino</string>
+<string name="offmode">Modo Offline</string>
+
 
 
 </resources>
