--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -197,5 +197,9 @@
     <string name="punm">You\u0027ve done a good work, keep going! Blessings!               (R07D Intermediate Level)</string>
     <string name="puna">You\u0027ve done an excellent work, keep going! Blessings!                      (R07D Advanced Level)</string> 
     
+     <string name="widgettit">R07D wdGtm?</string>
+     
+     
+     <string name="mtl">Meet the Lord in the Secret&#8230;</string>
 
 </resources>
