--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -229,5 +229,9 @@
     <string name="punp">Usted ha hecho un buen esfuerzo, siga avanzando! Bendiciones! (R07D Nivel Principiante)</string>
     <string name="punm">Usted ha hecho un buen trabajo, siga avanzando! Bendiciones! (R07D Nivel Intermedio)</string>
     <string name="puna">Usted ha hecho un excelente trabajo, siga avanzando! Bendiciones! (R07D Nivel Avanzado)</string> 
+    
+    <string name="widgettit">R07D \u00BFqmhD?</string>
+    
+      <string name="mtl">Encuentrate con el Señor en el Secreto&#8230;</string>
 
 </resources>
