--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -102,7 +102,7 @@
     <string name="may">Mayo</string>
     <string name="jun">Junio</string>
     <string name="jul">Julio</string>
-    <string name="ago">Augosto</string>
+    <string name="ago">Agosto</string>
     <string name="sept">Septiembre</string>
     <string name="oct">Octubre</string>
     <string name="nov">Noviembre</string>
