ENDMONTH DIALOG FIX SEND REPORT

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -142,9 +142,9 @@
      <string name="rl">Recordar mas adelante..</string>
      <string name="nt">No, gracias</string>
      
-       <string name="jal">Recordemos que este es el d\u00EDa que hizo el Se\u00F1or para que envi\u00E1ramos el R07D al l\u00EDder!</string>
+       <string name="jal">Recordemos que este es el d\u00EDa que hizo el Se\u00F1or para que compartieramos el Reporte R07D con un l\u00EDder/familiar/amigo/nosotros mismos!</string>
       <string name="jal2">Bendiciones!</string>
-     <string name="okr">OK</string>
+     <string name="okr">COMPARTIR</string>
      <string name="latr">DESPUES</string>
      
      <string name="atg">(AG)</string>
