--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -133,9 +133,9 @@
     <string name="rr">Rate </string>
     <string name="rl">Remind me later..</string>
     <string name="nt">No, thanks</string>
-    <string name="jal">Remember this is the day that the Lord has made for us to send the R07D to our leader!</string>
+    <string name="jal">Remember this is the day that the Lord has made for us to share the R07D Report with a leader/friend/family member/ourselves!</string>
     <string name="jal2">Blessings!</string>
-    <string name="okr">OK</string>
+    <string name="okr">SHARE</string>
     <string name="latr">LATER</string>
     <string name="atg">(TG)</string>
     <string name="ncon">No Connection</string>
